--- a/.env
+++ b/.env
@@ -2,14 +2,14 @@ APP_NAME=Medilapp
 APP_ENV=local
 APP_KEY=base64:jnSWMiZ/Udl6pD7p0lQK6Z3BkZpU2Da0ceQeZENbi9g=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000
-ASSET_URL=http://127.0.0.1:8000/assets
+APP_URL=https://dev.medilapp.com
+ASSET_URL=https://dev.medilapp.com
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST= sql362.main-hosting.eu
+DB_HOST= 127.0.0.1
 DB_PORT=3306
 DB_DATABASE=u794866945_medilapp_dev01
 DB_USERNAME=u794866945_medilapp_user1
